--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --https",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.11.0",
+    "@pinia/nuxt": "^0.10.1",
     "axios": "^1.7.9",
     "nuxt": "^3.15.4",
     "vue": "latest",
@@ -17,6 +19,7 @@
     "vue3-youtube": "^0.1.9"
   },
   "devDependencies": {
-    "sass": "^1.84.0"
+    "sass": "^1.84.0",
+    "tailwindcss": "^3.4.17"
   }
 }
